--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+     - assets/images/background.jpg
+     - assets/images/address.png
+     - assets/images/logoSpike.png
+     - assets/images/userProfile.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
