--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   dio: ^3.0.10
+  rflutter_alert: ^2.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
