--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -21,7 +21,11 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: 'dev'
-          flutter-version: '1.26.x' 
+          flutter-version: '1.26.x'
+        
+      # Upgrade flutter version
+      - run: flutter upgrade
+      
       # Setup flutter dependencies
       - run: flutter pub get
 
